updata format of 2014q1q2.md

--- a/2014q1q2.md
+++ b/2014q1q2.md
@@ -1,6 +1,6 @@
-# 马年上半年我做过哪些有趣的事情
-- 每半年会有一次小总结，每年春节都要做一次大总结，这都农历七月十五了，借着月圆之夜，偷工减料，就写篇去过哪些地方吧
-- 工作了之后和在学校不同，没有了可以随意翘课的假期（虽然以前也没怎么翘课旅游过），所以主要还是抓住各种法定价值，算下来，春节，清明，五一，端午，一个都没落下，全出去玩啦，而且自驾/徒步/骑行/跟团/自由行，各种玩法都有哈~
+#@ 马年上半年我去过哪些地方
+- 每半年会有一次小总结，每年春节都要做一次大总结，这都农历七月十五了，借着月圆之夜，偷工减料，就写写去过哪些地方吧
+- 工作了之后和在学校不同，没有了可以随意翘课的假期（虽然以前也没怎么翘课旅游过），所以主要还是抓住各种法定假期，春节，清明，五一，端午，一个都没落下，全出去玩啦，而且自驾/徒步/骑行/跟团/自由行，各种玩法都有哈~
 - 废话少说，进入正文，左右滑动切换旅程，上下切换照片，两指合并观看预览
 
 
