--- a/2014.md
+++ b/2014.md
@@ -13,9 +13,11 @@
 
 
 ##  使用说明
-- "左右滑动" 切换旅程
 - "上下滑动" 切换照片
+- "左右滑动" 切换旅程
 - "两指收缩" 观看预览(小心死机)
+- 安卓若显示异常请尝试横屏/手机自带浏览器
+- 电脑和iPhone应该都能正常显示
 
 
 - 图为每天上班的路~
